DFG Call/ConstructForwardVarargs fails to restore the stack pointer https://bugs.webkit.org/show_bug.cgi?id=144007

Reviewed by Mark Lam.

We were conditioning the stack pointer restoration on isVarargs, but we also need to do it
if isForwardVarargs.

* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::emitCall):
* dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::emitCall):
* tests/stress/varargs-then-slow-call.js: Added.
(foo):
(bar):
(fuzz):
(baz):



Canonical link: https://commits.webkit.org/161979@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183076 268f45cc-cd09-0410-ab3c-d52691b4dbfc